# Label6DPose

./: CMakeLists.txt  README.md
scene-0001/: cameraExtrinsic.txt  cameraIntinsic.txt  gt_pose_crayola_24_ct.txt  gt_pose_expo_dry_erase_board_eraser.txt  gt_pose_kleenex_tissue_box.txt  objects.txt
src/: CMakeLists.txt  get_image.cpp  label_poses.cpp  package.xml
src/models/: dove.pcd  toothpaste.pcd
